# load-testing

./: README.md  policies.yaml  rbac.yaml  renovate.json  swarm.sh  validate-policy.py
compose/: docker-compose.yml
compose/grafana/dashboards/: 2587_rev3.json  k6.yaml
compose/grafana/datasources/: influx-k6.yml
direct-connection/: main.py  values.yaml
direct-connection/lib/: policy-user-group-accept-request.json  policy-user-group-mutate-request.json  req_for_secure_pod_images.json  req_pod_with_container_with_capabilities_added.json.tmpl
indirect-connection/: main.py  values.yaml
indirect-connection/lib/: nginx-echo.json
k6/: apparmor.js  config.js  main.js  psp-user-group.js
k6/requests/: policy-apparmor-accept-request.json  policy-user-group-accept-request.json  policy-user-group-reject-request.json
policies/gatekeeper-always-happy/: artifacthub-pkg.yml  metadata.yml  policy.rego
policies/wapc-context-aware/: Cargo.toml  README.md  artifacthub-pkg.yml  metadata.yml
policies/wapc-context-aware/src/: lib.rs  settings.rs
policy-store/: .gitignore
requests/: policy-user-group-reject-request.json  req_pod_with_container_with_capabilities_added.json.tmpl  req_pod_without_security_context.json.tmpl
sqlite/: ar-load-testing-accept.json  echo-policy.yaml  generate-ns.rb  generate-session.rb  helper.js  k6-load.js  list-all.js  main.js  policies.json  report.md
sqlite/test_data/: rolebinding-reference-existing-namespace.json  rolebinding-reference-non-existing-namespace.json  session.yml  session_big.yml
